# physbam_public

./: CMakeLists.txt  README.md
PhysBAM_Geometry/: CMakeLists.txt  README
PhysBAM_Geometry/Adaptive_Geometry/: Intersects.cpp  Intersects_And_Intersection_Coordinates_Forward.h  Intersects_Forward.h
PhysBAM_Geometry/Advection_Collidable/: ADVECTION_COLLIDABLE_FORWARD.h  ADVECTION_WRAPPER_COLLIDABLE_CELL.h  ADVECTION_WRAPPER_COLLIDABLE_FACE.h
PhysBAM_Geometry/Basic_Geometry/: BASIC_GEOMETRY_FORWARD.h  BASIC_GEOMETRY_POLICY.h  BASIC_SIMPLEX_POLICY.h  BOX.cpp  BOX.h  ELLIPSOID.cpp  HEXAHEDRON.cpp  ORIENTED_BOX.cpp  PLANE.cpp  POLYGON.h  RAY.cpp  RAY.h  RING.cpp  RING.h  SEGMENT_1D.h  SEGMENT_2D.cpp  SEGMENT_2D.h  SPHERE.cpp  SPHERE.h
PhysBAM_Geometry/Basic_Geometry_Computations/: BOX_BOX_INTERSECTION_AREA.h
PhysBAM_Geometry/Basic_Geometry_Intersections/: BOX_LINE_2D_INTERSECTION.h  BOX_PLANE_INTERSECTION.cpp  BOX_PLANE_INTERSECTION.h  BOX_TRIANGLE_3D_INTERSECTION.cpp  BOX_TRIANGLE_3D_INTERSECTION.h  RAY_BOX_INTERSECTION.cpp  RAY_CYLINDER_INTERSECTION.cpp  RAY_CYLINDER_INTERSECTION.h  RAY_ELLIPSOID_INTERSECTION.h  RAY_ORIENTED_BOX_INTERSECTION.cpp  RAY_PLANE_INTERSECTION.cpp  RAY_POINT_SIMPLEX_1D_INTERSECTION.h  RAY_RING_INTERSECTION.cpp  RAY_RING_INTERSECTION.h  RAY_SEGMENT_2D_INTERSECTION.cpp  RAY_SEGMENT_2D_INTERSECTION.h  RAY_SPHERE_INTERSECTION.cpp  RAY_TETRAHEDRON_INTERSECTION.h  RAY_TRIANGLE_3D_INTERSECTION.cpp  SEGMENT_2D_SEGMENT_2D_INTERSECTION.cpp  SEGMENT_3D_TRIANGLE_3D_INTERSECTION.cpp
PhysBAM_Geometry/Collision_Detection_Computations/: GET_POTENTIAL_COLLISIONS.cpp
PhysBAM_Geometry/Collisions/: COLLISION_GEOMETRY_IMPULSE_ACCUMULATOR.h  COLLISION_PARTICLE_STATE.h  POINT_REPULSION.cpp  RIGID_COLLISION_GEOMETRY_1D.cpp  RIGID_COLLISION_GEOMETRY_2D.cpp  RIGID_COLLISION_GEOMETRY_2D.h
PhysBAM_Geometry/Collisions_And_Grids/: GRID_BASED_COLLISION_GEOMETRY.h
PhysBAM_Geometry/Constitutive_Models/: STRAIN_MEASURE.h
PhysBAM_Geometry/Continuous_Collision_Detection/: EDGE_EDGE_COLLISION.cpp  POINT_FACE_COLLISION.cpp
PhysBAM_Geometry/Fourier_Transforms_Calculations/: DEEP_WATER_EVOLUTION_HEIGHTS.h
PhysBAM_Geometry/Fracture/: CUTTING_SIMPLEX.h
PhysBAM_Geometry/Geometry_Particles/: GEOMETRY_PARTICLES_FORWARD.h  RIGID_GEOMETRY_PARTICLES.h
PhysBAM_Geometry/Grids_Dyadic_Advection_Collidable/: ADVECTION_COLLIDABLE_POLICY_DYADIC.h  ADVECTION_SEMI_LAGRANGIAN_COLLIDABLE_FACE_DYADIC.h
PhysBAM_Geometry/Grids_Dyadic_Collisions/: GRID_BASED_COLLISION_GEOMETRY_COLLECTION_POLICY_DYADIC.h  GRID_BASED_COLLISION_GEOMETRY_DYADIC.h
PhysBAM_Geometry/Grids_Dyadic_Computations/: LEVELSET_DYADIC_SIGNED_DISTANCE.cpp  LEVELSET_DYADIC_SIGNED_DISTANCE.h  LEVELSET_MAKER_DYADIC.cpp  RIGID_GEOMETRY_RASTERIZATION_DYADIC.h  TRIANGULATED_SURFACE_SIGNED_DISTANCE_DYADIC.cpp
PhysBAM_Geometry/Grids_Dyadic_Interpolation_Collidable/: FACE_LOOKUP_COLLIDABLE_DYADIC.h  INTERPOLATION_COLLIDABLE_POLICY_DYADIC.h
PhysBAM_Geometry/Grids_Dyadic_Level_Sets/: DYADIC_IMPLICIT_OBJECT_ON_A_RAY.h  FAST_MARCHING_METHOD_DYADIC.cpp  FAST_MARCHING_METHOD_DYADIC.h  LEVELSET_BINTREE.h  LEVELSET_DYADIC.cpp  LEVELSET_POLICY_DYADIC.h  LEVELSET_QUADTREE.cpp
PhysBAM_Geometry/Grids_Dyadic_PDE_Linear/: LAPLACE_COLLIDABLE_DYADIC.h  POISSON_COLLIDABLE_DYADIC.h
PhysBAM_Geometry/Grids_RLE_Advection_Collidable/: ADVECTION_COLLIDABLE_RLE_FORWARD.h  ADVECTION_SEMI_LAGRANGIAN_COLLIDABLE_CELL_RLE.h  ADVECTION_SEMI_LAGRANGIAN_COLLIDABLE_FACE_RLE.h
PhysBAM_Geometry/Grids_RLE_Collisions/: GRID_BASED_COLLISION_GEOMETRY_COLLECTION_POLICY_RLE.h  GRID_BASED_COLLISION_GEOMETRY_RLE.cpp
PhysBAM_Geometry/Grids_RLE_Computations/: DUALCONTOUR_RLE_3D.cpp  DUALCONTOUR_RLE_3D.h  RIGID_GEOMETRY_RASTERIZATION_RLE.cpp  RIGID_GEOMETRY_RASTERIZATION_RLE.h
PhysBAM_Geometry/Grids_RLE_Interpolation_Collidable/: AVERAGING_COLLIDABLE_RLE.h  INTERPOLATION_COLLIDABLE_RLE_FORWARD.h
PhysBAM_Geometry/Grids_RLE_Level_Sets/: EXTRAPOLATION_RLE.cpp  EXTRAPOLATION_RLE.h  FAST_MARCHING_METHOD_RLE.cpp  LEVELSET_RLE.cpp  LEVELSET_RLE.h  RLE_LEVELSET_ON_A_RAY.h
PhysBAM_Geometry/Grids_RLE_PDE_Linear/: LAPLACE_COLLIDABLE_RLE.cpp  LAPLACE_COLLIDABLE_RLE.h
PhysBAM_Geometry/Grids_Uniform_Advection_Collidable/: ADVECTION_COLLIDABLE_POLICY_UNIFORM.h  ADVECTION_COLLIDABLE_UNIFORM_FORWARD.h  ADVECTION_SEMI_LAGRANGIAN_COLLIDABLE_CELL_BINARY_UNIFORM.h  ADVECTION_SEMI_LAGRANGIAN_COLLIDABLE_CELL_UNIFORM.cpp  ADVECTION_SEMI_LAGRANGIAN_COLLIDABLE_CELL_UNIFORM.h  ADVECTION_SEMI_LAGRANGIAN_COLLIDABLE_FACE_BINARY_UNIFORM.cpp  ADVECTION_SEMI_LAGRANGIAN_COLLIDABLE_FACE_BINARY_UNIFORM.h  ADVECTION_SEMI_LAGRANGIAN_COLLIDABLE_FACE_SLIP_UNIFORM.cpp  ADVECTION_SEMI_LAGRANGIAN_COLLIDABLE_FACE_SLIP_UNIFORM.h
PhysBAM_Geometry/Grids_Uniform_Collisions/: CUT_CELL.h  CUT_CELL_COMPUTATIONS.cpp  CUT_CELL_COMPUTATIONS.h  GRID_BASED_COLLISION_GEOMETRY_UNIFORM.cpp  GRID_BASED_COLLISION_GEOMETRY_UNIFORM.h
PhysBAM_Geometry/Grids_Uniform_Computations/: COLLIDABLE_GRADIENT_UNIFORM.h  CYLINDER_SIGNED_DISTANCE.cpp  DUALCONTOUR_2D.h  DUALCONTOUR_3D.h  ELLIPSOID_SIGNED_DISTANCE.cpp  ELLIPSOID_SIGNED_DISTANCE.h  LEVELSET_MAKER_UNIFORM.cpp  LEVELSET_MAKER_UNIFORM.h  RIGID_GEOMETRY_RASTERIZATION_UNIFORM.h  SEGMENTED_CURVE_2D_SIGNED_DISTANCE.h  SPHERE_SIGNED_DISTANCE.cpp  TRIANGULATED_SURFACE_HEAVISIDE_UNIFORM.cpp  TRIANGULATED_SURFACE_HEAVISIDE_UNIFORM.h
PhysBAM_Geometry/Grids_Uniform_Interpolation_Collidable/: AVERAGING_COLLIDABLE_BINARY_UNIFORM.h  AVERAGING_COLLIDABLE_UNIFORM.h  FACE_LOOKUP_COLLIDABLE_BINARY_UNIFORM.cpp  FACE_LOOKUP_COLLIDABLE_BINARY_UNIFORM.h  FACE_LOOKUP_COLLIDABLE_SLIP_UNIFORM.h  INTERPOLATION_COLLIDABLE_POLICY_UNIFORM.h  LINEAR_INTERPOLATION_COLLIDABLE_CELL_UNIFORM.cpp  LINEAR_INTERPOLATION_COLLIDABLE_CELL_UNIFORM.h
PhysBAM_Geometry/Grids_Uniform_Level_Sets/: EXTRAPOLATION_UNIFORM.cpp  EXTRAPOLATION_UNIFORM.h  FAST_LEVELSET.h  FAST_MARCHING_METHOD_UNIFORM.cpp  FAST_MARCHING_METHOD_UNIFORM.h  LEVELSET_1D.cpp  LEVELSET_1D.h  LEVELSET_2D.cpp  LEVELSET_2D.h  LEVELSET_3D.cpp  (+5 more)
PhysBAM_Rendering/: CMakeLists.txt
PhysBAM_Tools/: CMakeLists.txt
Projects/: CMakeLists.txt
(+1982 files in other folders)
